UIOWEB - fix invalid CSS and missing border

--- a/src/main/resources/web/js/plugins/thickbox-modified/thickbox.css
+++ b/src/main/resources/web/js/plugins/thickbox-modified/thickbox.css
@@ -55,7 +55,7 @@
 	z-index: 102;
 	color:#000000;
 	display:none;
-	border: border: 2px solid #646464;
+	border: 2px solid #646464;
 	text-align:left;
 	top:50%;
 	left:50%;
